bug fixes api doc
